--- a/lp-2/assets/css/style.css
+++ b/lp-2/assets/css/style.css
@@ -2997,7 +2997,7 @@ main#main {
   align-items: center;
   text-align: center;
   padding:40px 20px;
-  font-size: 1.2em;
+  font-size: 16px;
   gap:0.6rem;
 }
 .carrier-support .t-large {
