--- a/lp-2/assets/css/style.css
+++ b/lp-2/assets/css/style.css
@@ -260,6 +260,11 @@ fieldset {
   border: 0;
 }
 
+.span-disabled {
+  pointer-events: none;
+  opacity: 0.5;
+}
+
 [hidden] {
   display: none !important;
 }
